--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,14 @@
 .gridContainer {
     display: flex;
+    width: 500px;
+}
+
+.gridTile {
+    background-color: lightblue;
+    height: 50px;
+    width: 50px;
+}
+
+.gridTile:hover {
+    background-color: black;
 }
