--- a/styles.css
+++ b/styles.css
@@ -1,14 +1,27 @@
 .gridContainer {
     display: flex;
-    width: 500px;
+    max-width: 800px;
+    height: 800px;
+    border: 2px solid black;
+    align-items: center;
+    margin: auto;
+}
+
+.gridRow {
+    width: 800px;
+    flex: auto;
 }
 
 .gridTile {
-    background-color: lightblue;
-    height: 50px;
-    width: 50px;
+    background-color: aquamarine;
+    flex: auto;
+    border: 1px solid gray;
 }
 
-.gridTile:hover {
-    background-color: black;
+button {
+    display: block;
+    margin: 20px auto;
+    padding: 8px 16px;
+    font-size: 16px;
 }
+
